--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game tumbuk tikus</title>
     <link rel="stylesheet" href="./style.css">
+
+    <script src="https://cdn.jsdelivr.net/gh/ilh4mb/DOMCREATE@1/dom.js"></script>
+    
 </head>
 <body>
     <h1>Pukul Tikus Tanah</h1>
